tests/regression/errors/duplicate_operation_tydef_effect.eff
(* Duplicate operations are not allowed in an effect type *)
type cow =
effect
  operation chew : unit -> int
  operation chew : unit -> int
end

